@@ -11,6 +11,14 @@
 
     <name>jjq</name>
     <description>High-performance Java jq implementation backed by fastjson2</description>
+    <url>https://github.com/Hyperfoil/jjq</url>
+
+    <scm>
+        <connection>scm:git:git://github.com/Hyperfoil/jjq.git</connection>
+        <developerConnection>scm:git:ssh://git@github.com/Hyperfoil/jjq.git</developerConnection>
+        <url>https://github.com/Hyperfoil/jjq</url>
+        <tag>HEAD</tag>
+    </scm>
 
     <licenses>
         <license>
@@ -19,6 +27,22 @@
             <distribution>repo</distribution>
         </license>
     </licenses>
+
+    <distributionManagement>
+        <repository>
+            <id>central</id>
+            <url>https://central.sonatype.com/artifact</url>
+        </repository>
+    </distributionManagement>
+
+    <developers>
+        <developer>
+            <name>Ståle Pedersen</name>
+            <email>spederse@redhat.com</email>
+            <organization>Red Hat</organization>
+            <organizationUrl>https://www.redhat.com</organizationUrl>
+        </developer>
+    </developers>
 
     <modules>
         <module>jjq-core</module>
@@ -37,6 +61,10 @@
         <jackson.version>2.18.2</jackson.version>
         <aesh.version>2.7</aesh.version>
         <junit.version>5.11.3</junit.version>
+        <version.sonatype.central>0.7.0</version.sonatype.central>
+        <version.maven.source>3.3.1</version.maven.source>
+        <version.maven.javadoc>3.11.2</version.maven.javadoc>
+        <version.maven.gpg>3.2.7</version.maven.gpg>
     </properties>
 
     <dependencyManagement>
@@ -102,7 +130,90 @@
                         <argLine>--enable-preview</argLine>
                     </configuration>
                 </plugin>
+                <plugin>
+                    <groupId>org.sonatype.central</groupId>
+                    <artifactId>central-publishing-maven-plugin</artifactId>
+                    <version>${version.sonatype.central}</version>
+                    <extensions>true</extensions>
+                    <configuration>
+                        <publishingServerId>central</publishingServerId>
+                        <autoPublish>true</autoPublish>
+                        <waitUntil>published</waitUntil>
+                    </configuration>
+                </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-release-plugin</artifactId>
+                    <configuration>
+                        <releaseProfiles>release</releaseProfiles>
+                        <tagNameFormat>@{project.version}</tagNameFormat>
+                    </configuration>
+                </plugin>
             </plugins>
         </pluginManagement>
     </build>
+
+    <profiles>
+        <profile>
+            <id>release</id>
+            <activation>
+                <property>
+                    <name>release</name>
+                </property>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.sonatype.central</groupId>
+                        <artifactId>central-publishing-maven-plugin</artifactId>
+                        <extensions>true</extensions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-source-plugin</artifactId>
+                        <version>${version.maven.source}</version>
+                        <executions>
+                            <execution>
+                                <id>attach-sources</id>
+                                <goals>
+                                    <goal>jar-no-fork</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-javadoc-plugin</artifactId>
+                        <version>${version.maven.javadoc}</version>
+                        <configuration>
+                            <release>21</release>
+                            <additionalOptions>--enable-preview</additionalOptions>
+                        </configuration>
+                        <executions>
+                            <execution>
+                                <id>attach-javadocs</id>
+                                <goals>
+                                    <goal>jar</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-gpg-plugin</artifactId>
+                        <version>${version.maven.gpg}</version>
+                        <executions>
+                            <execution>
+                                <id>sign-artifacts</id>
+                                <phase>verify</phase>
+                                <goals>
+                                    <goal>sign</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project>
